--- a/.gitignore
+++ b/.gitignore
@@ -39,12 +39,15 @@ jspm_packages/
 .yarn-integrity
 
 # Environment variables
-# .env
-# .env.local
-# .env.development.local
-# .env.test.local
-# .env.production.local
-# .env.*
+*/.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 但不忽略 .env.example 模板文件
+!.env.example
+!*/.env.example
 
 # Database files
 *.sqlite
